--- a/content/my2014.md
+++ b/content/my2014.md
@@ -19,5 +19,4 @@ Slug: 我的2014总结
 2.个人GDP目标比2015年翻1倍；
 
 3.期待爱；
-
-<embed src="" autostart="1"  loop=-1 type="application/x-mplayer2" width="400" height="64"></embed>
+<embed src="http://www.xcnyxx.com/yf/xiangwang.mp3" autostart="1"  loop=-1 type="application/x-mplayer2" width="400" height="64"></embed>
