--- a/content/my2014.md
+++ b/content/my2014.md
@@ -19,4 +19,8 @@ Slug: 我的2014总结
 2.个人GDP目标比2015年翻1倍；
 
 3.期待爱；
-<embed src="http://www.xcnyxx.com/yf/xiangwang.mp3" autostart="1"  loop=-1 type="application/x-mplayer2" width="400" height="64"></embed>
+
+下面就由我们来欣赏下音乐吧-向往
+<video autoplay src="http://www.xcnyxx.com/yf/xiangwang.mp3" controls="controls">
+您的浏览器不支持 video 标签。
+</video>
